2014-04-21  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/TeleDisk.cs:
	  Added CRC calculation method and check of header using CRC
	  to return a positive identification.

2014-04-19  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugins/TeleDisk.cs:
	* FileSystemIDandChk.csproj:
	  Started Sydex TeleDisk implementation, with structs,
	  constants and initial Identify() implementation.

2014-04-19  Natalia Portillo  <claunia@claunia.com>

	* LICENSE:
	* Main.cs:
	* Plugins.cs:
	* Swapping.cs:
	* Plugins/BFS.cs:
	* Plugins/FFS.cs:
	* Plugins/ODS.cs:
	* Plugins/FAT.cs:
	* Plugins/SysV.cs:
	* Plugins/NTFS.cs:
	* AssemblyInfo.cs:
	* Plugins/HPFS.cs:
	* DateHandlers.cs:
	* Plugins/Opera.cs:
	* Plugins/extFS.cs:
	* Plugins/ext2FS.cs:
	* Plugins/LisaFS.cs:
	* StringHandlers.cs:
	* Plugins/Plugin.cs:
	* Plugins/MinixFS.cs:
	* Plugins/UNIXBFS.cs:
	* Plugins/ISO9660.cs:
	* Plugins/Symbian.cs:
	* Plugins/SolarFS.cs:
	* PartPlugins/MBR.cs:
	* PartPlugins/NeXT.cs:
	* Plugins/AppleMFS.cs:
	* Plugins/PCEngine.cs:
	* Plugins/AppleHFS.cs:
	* ImagePlugins/CDRWin.cs:
	* Plugins/AppleHFSPlus.cs:
	* PartPlugins/AppleMap.cs:
	* BigEndianBitConverter.cs:
	* PartPlugins/PartPlugin.cs:
	* EndianAwareBinaryReader.cs:
	* ImagePlugins/DiskCopy42.cs:
	* ImagePlugins/ImagePlugin.cs:
	  Change license from AGPLv3 to GPLv3 to make some good
	  friends happier, and be able to use code from Linux if ever
	  *ever* needed.

2014-04-17  Natalia Portillo  <claunia@claunia.com>

	* TODO:
	* LICENSE:
	* Main.cs:
	* README.md:
	* FileSystemIDandChk.csproj:
	  Add documentation and license and prepare for publication

2014-04-17  Natalia Portillo  <claunia@claunia.com>

	* Main.cs:
	* Plugins.cs:
	* Swapping.cs:
	* Plugins/ODS.cs:
	* Plugins/FFS.cs:
	* Plugins/FAT.cs:
	* Plugins/BFS.cs:
	* Plugins/SysV.cs:
	* DateHandlers.cs:
	* Plugins/NTFS.cs:
	* AssemblyInfo.cs:
	* Plugins/HPFS.cs:
	* Plugins/Opera.cs:
	* Plugins/extFS.cs:
	* Plugins/Plugin.cs:
	* Plugins/LisaFS.cs: