@@ -1,6 +1,11 @@
 2014-04-21  Natalia Portillo  <claunia@claunia.com>
 
 	* ImagePlugins/TeleDisk.cs:
+	  Start to implement OpenImage(), decode comment block.
+
+2014-04-21  Natalia Portillo  <claunia@claunia.com>
+
+	* ImagePlugins/TeleDisk.cs:
 	  Added CRC calculation method and check of header using CRC
 	  to return a positive identification.
 
